--- a/CR49_二阶段/Android/布局与控件.md
+++ b/CR49_二阶段/Android/布局与控件.md
@@ -18,7 +18,7 @@
 ## 视图中的布局
 * https://developer.android.com/develop/ui/views/layout/declaring-layout?hl=zh-cn
 * 布局定义了应用中的界面结构。
-![视图层次结构的图示，它定义了一个 界面布局。](布局与控件01.png)
+![视图层次结构的图示，它定义了一个 界面布局。](pic/布局与控件01.png)
 `View` 对象通常是控件，如 `TextView`、`Button` 或 `ImageView`。 `ViewGroup` 通常是布局的容器，如 `LinearLayout`、`RelativeLayout` 或 `FrameLayout`。
 
 ## 编写 XML
@@ -81,7 +81,7 @@ public class MainActivity extends Activity {
 ```
 ### 布局参数
 * `View`对象的布局参数定义了`View`对象在`ViewGroup`中的位置和大小。
-![带布局的视图层次结构的可视化 与每个视图相关联的参数。](布局与控件02.png)
+![带布局的视图层次结构的可视化 与每个视图相关联的参数。](pic/布局与控件02.png)
 * 每个`LayoutParams`子类都有自己的属性。每个视图都使用`layout_width`和`layout_height`属性来定义它们的宽和高，可以使用`match_parent`、`wrap_content`或`固定值`。
   * `match_parent`： 匹配父视图的大小。
   * `wrap_content`： 根据视图内容自适应大小。
@@ -100,7 +100,9 @@ public class MainActivity extends Activity {
 * https://developer.android.google.cn/reference/kotlin/android/widget/LinearLayout
 * 线性布局默认在垂直方向上排列子视图。可以使用`android:orientation`属性来更改方向。
   * `android:orientation="horizontal"`： 水平方向
+    * ![水平布局](pic/布局与控件03.png)
   * `android:orientation="vertical"`： 垂直方向
+    * ![垂直布局](pic/布局与控件04.png)
 #### 比例（权重）
 * `android:layout_weight`属性用于设置子视图的权重。例如三个按钮的权重分别为1、2、3，那么它们的宽度分别为1/6、2/6、3/6。
 ``` XML
