--- a/CR49_二阶段/Android/应用数据和文件.md
+++ b/CR49_二阶段/Android/应用数据和文件.md
@@ -5,7 +5,10 @@
   - [共享存储空间](#共享存储空间)
     - [媒体库](#媒体库)
     - [照片选择器](#照片选择器)
-    - [文档和其他文件](#文档和其他文件)
+  - [使用 SharedPreferences 保存简单数据（键值对数据） - 共享偏好设置](#使用-sharedpreferences-保存简单数据键值对数据---共享偏好设置)
+- [SQLite](#sqlite)
+  - [创建数据库](#创建数据库)
+- [使用 Room 持久化库](#使用-room-持久化库)
 
 # 应用数据和文件
     https://developer.android.google.cn/guide/topics/data?hl=zh-cn
@@ -108,7 +111,7 @@ Android提供了以下几种共享存储空间：
 * 数据集和数据库：存储结构化数据，例如联系人、日历事件和电子邮件。
 
 ### 媒体库
-
+    https://developer.android.google.cn/training/data-storage/shared/media?hl=zh-cn
 如需与媒体库交互，需要使用从应用上下文获取的 `ContentResolver` 对象：
 
 ``` Java
@@ -174,6 +177,7 @@ resolver.delete(uri, null, null);
 ```
 
 ### 照片选择器
+    https://developer.android.google.cn/training/data-storage/shared/photopicker?hl=zh-cn
 照片选择器提供了一个 UI 组件，用于选择照片、视频和音频文件。
 
 * 如果照片选择器在设备上不可用，会自动调用 `ACTION_GET_CONTENT` 意图，以允许用户选择文件。
@@ -229,4 +233,207 @@ pickMultipleMedia.launch(new PickVisualMediaRequest.Builder()
         .build());
 ```
 
-### 文档和其他文件
+## 使用 SharedPreferences 保存简单数据（键值对数据） - 共享偏好设置
+    https://developer.android.google.cn/training/data-storage/shared-preferences?hl=zh-cn
+
+* 获取共享偏好设置句柄
+  * `getSharedPreferences()` - 需要使用多个共享偏好设置文件，第一个参数指定文件名
+  * `getPreferences()` - 只需要一个共享偏好设置文件
+    * 参数：
+    * `MODE_PRIVATE` - 只有当前应用可以访问
+    * `MODE_WORLD_READABLE` - 其他应用可以读取
+    * `MODE_WORLD_WRITEABLE` - 其他应用可以写入
+
+``` Java
+// 获取共享偏好设置句柄
+SharedPreferences sharedPreferences = getSharedPreferences("my_preferences", MODE_PRIVATE);
+```
+
+* 读写共享偏好设置文件
+  * 使用 `SharedPreferences.Editor` 对象进行读写操作
+    * `putString()` 和 `getString()` 读写字符串
+    * `putInt()` 和 `getInt()` 读写整数
+    * `putBoolean()` 和 `getBoolean()` 读写布尔值
+    * 调用 `apply()` 方法异步写入
+    * 调用 `commit()` 方法同步写入
+
+``` Java
+// 写入共享偏好设置文件
+SharedPreferences.Editor editor = sharedPreferences.edit();
+editor.putString("name", "Tom");
+editor.apply();
+
+// 读取共享偏好设置文件
+String name = sharedPreferences.getString("name", "");
+Log.v("SharedPreferences", name);
+```
+
+# SQLite
+    https://developer.android.google.cn/training/data-storage/sqlite?hl=zh-cn
+
+## 创建数据库
+Android使用 `SQLiteOpenHelper` 类来创建和管理数据库。
+在 Android Studio 安装 SQLite 插件即可查看手机上的数据库。
+
+
+* 创建数据库
+  * 继承 `SQLiteOpenHelper` 类
+  * 实现 `onCreate()` 方法，在数据库创建时执行
+  * 实现 `onUpgrade()` 方法，在数据库升级时执行
+
+``` Java
+public class MyDatabaseHelper extends SQLiteOpenHelper {
+    public MyDatabaseHelper(Context context) {
+        // 建库
+        super(context, "my_database", null, 1);
+    }
+
+    @Override
+    public void onCreate(SQLiteDatabase db) {
+        // 建表
+        db.execSQL("CREATE TABLE my_table (id int primary key, name varchar(255))");
+    }
+
+    @Override
+    public void onUpgrade(SQLiteDatabase db, int oldVersion, int newVersion) {
+        // 升级
+    }
+}
+```
+
+访问数据库：
+``` Java
+// 获取数据库句柄
+MyDatabaseHelper helper = new MyDatabaseHelper(this);
+```
+
+数据库操作：
+  * 调用 `getWritableDatabase()` 方法获取可写数据库句柄
+  * 调用 `getReadableDatabase()` 方法获取可读数据库句柄
+  * 调用 `execSQL()` 方法执行 SQL 语句
+  * 调用 `insert()` 方法插入数据
+  * 调用 `update()` 方法更新数据
+  * 调用 `delete()` 方法删除数据
+  * 调用 `query()` 方法查询数据
+  * 调用 `close()` 方法关闭数据库句柄
+  * 调用 `rawQuery()` 方法执行 SQL 语句并返回结果集
+
+``` Java
+// 插入数据
+SQLiteDatabase db = helper.getWritableDatabase();
+// 使用 SQL 语句插入数据
+db.execSQL("INSERT INTO my_table (id, name) VALUES (1, 'Tom')");
+// 使用 ContentValues 插入数据
+ContentValues values = new ContentValues();
+values.put("id", 2);
+values.put("name", "Jerry");
+db.insert("my_table", null, values);
+
+// 查询数据
+SQLiteDatabase db = helper.getReadableDatabase();
+
+// 创建字符串数组，用于指定要查询的列
+String[] columns = {"id", "name"};
+
+// 用于 where 子句的键
+String selection = "id =?";
+
+// 用于 where 子句的参数
+String[] selectionArgs = {"1"};
+
+// 用于排序的列
+String sortOrder = "id DESC";
+
+// 查询数据
+Cursor cursor = db.query("my_table", columns, selection, selectionArgs, null, null, sortOrder);
+
+// 遍历结果
+while (cursor.moveToNext()) {
+    int id = cursor.getInt(cursor.getColumnIndex("id"));
+    String name = cursor.getString(cursor.getColumnIndex("name"));
+    Log.v("SQLite", id + " " + name);
+}
+
+// 关闭游标
+cursor.close();
+
+// 关闭数据库句柄
+db.close();
+```
+
+# 使用 Room 持久化库
+
+https://developer.android.google.cn/training/data-storage/room?hl=zh-cn
+
+* 数据库类 - 用于保存数据库并访问数据库的访问点
+* 数据实体 - 数据库中的表
+* 数据访问对象 - 数据库中的表的操作
+
+``` Java
+// 定义数据实体
+@Entity
+public class User {
+    // 定义主键
+    @PrimaryKey
+    public int uid;
+
+    // 定义列
+    @ColumnInfo(name = "first_name")
+    public String firstName;
+
+    @ColumnInfo(name = "last_name")
+    public String lastName;
+}
+
+// 定义数据访问对象
+@Dao
+public interface UserDao {
+    // 插入数据
+    @Insert
+    void insertAll(User... users);
+
+    // 查询数据
+    @Query("SELECT * FROM user")
+    List<User> getAll();
+
+    // 更新数据
+    @Update
+    void updateUsers(User... users);
+
+    // 删除数据
+    @Delete
+    void delete(User user);
+}
+
+// 定义数据库
+@Database(entities = {User.class}, version = 1)
+public abstract class AppDatabase extends RoomDatabase {
+    public abstract UserDao userDao();
+}
+```
+
+使用数据库：
+
+``` Java
+// 创建数据库实例
+AppDatabase db = Room.databaseBuilder(getApplicationContext(),
+        AppDatabase.class, "database-name").build();
+
+// 获取数据访问对象
+UserDao userDao = db.userDao();
+
+// 插入数据
+userDao.insertAll(new User(1, "Tom", "Jerry"));
+
+// 查询数据
+List<User> users = userDao.getAll();
+
+// 更新数据
+userDao.updateUsers(new User(1, "Tom", "Jerry"));
+
+// 删除数据
+userDao.delete(new User(1, "Tom", "Jerry"));
+
+// 关闭数据库
+db.close();
+```
