--- a/CR49_二阶段/Android/菜单、对话框、视图容器.md
+++ b/CR49_二阶段/Android/菜单、对话框、视图容器.md
@@ -1,6 +1,8 @@
 - [菜单](#菜单)
   - [使用XML定义菜单](#使用xml定义菜单)
   - [创建选项菜单](#创建选项菜单)
+    - [处理点击事件](#处理点击事件)
+    - [运行时更改菜单项](#运行时更改菜单项)
   - [创建上下文菜单](#创建上下文菜单)
   - [创建菜单组](#创建菜单组)
 - [对话框](#对话框)
@@ -225,45 +227,73 @@ dialog.show();
       android:layout_width="match_parent"
       android:layout_height="match_parent" />
 ```
+
+列表视图的每一项都是一个视图
+``` XML
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/id_lv_child_text"/>
+```
+
 * 列表视图会根据`ListAdapter`的内容自动调整大小，使用`setAdapter(android.widget.ListAdapter)`方法将`ListAdapter`设置到列表视图。
 * 这里使用`ArrayAdapter`创建`ListAdapter`。
 * 重写`ArrayAdapter`的`getView()`方法，自定义列表视图的布局。
 ``` Java
-// 子类化`ArrayAdapter`，重写`getView()`方法。
-public class MyAdapter extends ArrayAdapter<String> {
-    public MyAdapter(Context context, ArrayList<String> words) {
-        super(context, 0, words);
-    }
-
-    @Override
-    public View getView(int position, View convertView, ViewGroup parent) {
-        // 获取当前项的单词。
-        String word = getItem(position);
-        // 如果`convertView`为空，使用`LayoutInflater`加载布局。
-        if (convertView == null) {
-            convertView = LayoutInflater.from(getContext()).inflate(R.layout.item_word, parent, false);
+// 数据类
+    static class Car{
+        public Car(int imgID, String name){
+            this.imgID = imgID;
+            this.name = name;
         }
-        // 查找布局中的`TextView`。
-        TextView tvWord = (TextView) convertView.findViewById(R.id.tv_word);
-        // 设置`TextView`的文本。
-        tvWord.setText(word);
-        // 返回布局。
-        return convertView;
+        public int imgID;
+        public String name;
     }
-}
 
-// 使用布局文件实例化一个视图
-View view = LayoutInflater.from(getContext()).inflate(R.layout.item_word, parent, false);
-```
-* 使用`AdapterView.OnItemClickListener`处理列表视图的点击事件。
-``` Java
-// 处理列表视图的点击事件。
-listView.setOnItemClickListener(new AdapterView.OnItemClickListener() {
-    @Override
-    public void onItemClick(AdapterView<?> parent, View view, int position, long id) {
-        // 处理点击事件
+// 子类化`ArrayAdapter`，重写`getView()`方法。
+    static class CarAdapter extends ArrayAdapter<Car>{
+
+        public CarAdapter(@NonNull Context context, int resource, @NonNull List<Car> objects) {
+            super(context, resource, objects);
+        }
+
+        @NonNull
+        @Override
+        public View getView(int position, @Nullable View convertView, @NonNull ViewGroup parent) {
+            //获取数据
+            Car car = getItem(position);
+
+            //使用布局文件实例化一个视图
+            View itemView = LayoutInflater.from(getContext()).inflate(R.layout.item, parent,false);
+
+            //获取视图
+            ImageView imageView = itemView.findViewById(R.id.imag);
+            TextView textView = itemView.findViewById(R.id.text);
+
+            //设置图片和文本
+            imageView.setImageResource(car.imgID);
+            textView.setText(car.name);
+
+            return itemView;
+        }
     }
-});
+
+// 实例化适配器并安装到 ListView 中
+@Override
+protected void onCreate(Bundle savedInstanceState) {
+    super.onCreate(savedInstanceState);
+    setContentView(R.layout.activity_main);
+
+    ListView listView = findViewById(R.id.list_view);
+
+    List<Car> cars = new ArrayList<>();
+    cars.add(new Car("BMW", R.drawable.bmw));
+    cars.add(new Car("Audi", R.drawable.audi));
+    cars.add(new Car("Mercedes", R.drawable.mercedes));
+
+    CarAdapter adapter = new CarAdapter(this, R.layout.item, cars);
+    listView.setAdapter(adapter);
+}
 ```
 
 # 使用 `RecyclerView` 创建动态列表
